--- a/RomajiSongName.csproj
+++ b/RomajiSongName.csproj
@@ -6,7 +6,7 @@
         <Nullable>disable</Nullable>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
         <LangVersion>12</LangVersion>
-        <RootNamespace>GearBox</RootNamespace>
+        <RootNamespace>RomajiSongName</RootNamespace>
     </PropertyGroup>
 
     <Target Name="CopyDLLs" AfterTargets="Build">
